--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "reactjs-localstorage": "^1.0.1",
     "web-vitals": "^2.1.0"
   },
