--- a/currency-exchange/package.json
+++ b/currency-exchange/package.json
@@ -1,7 +1,7 @@
 {
   "name": "currency-exchange",
   "version": "0.1.0",
-  "homepage": "https://sam-twdy.github.io/currency-exchange-app/",
+  "homepage": "https://sam-twdy.github.io/currency-exchange/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
