--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "currency-exchange",
   "version": "0.1.0",
+  "homepage": "https://altcademy.github.io/currency-exchange/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.2.1",
     "chart.js": "2.8.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
